<resources>
    <string name="app_name" translatable="false">Trips</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="choose_location">Elegir ubicación</string>
    <string name="no_attractions">No se encontraron atracciones cerca</string>
    <string name="no_tours">No se encontraron recorridos cerca</string>
    <string name="no_points_of_interest">La atracción no tiene puntos de interés</string>
    <string name="geolocalization_card">Mi ubicación actual</string>
    <string name="action_settings">Ajustes</string>
    <string name="review_input_hint">Escribir una opinión</string>
    <string name="search">Buscar</string>
    <string name="my_opinion">Mi opinión</string>
    <string name="other_opinions">Otras opiniones</string>
    <string name="see_more">VER MÁS ›</string>
    <string name="location_found">Usted se encuentra en</string>
    <string name="dollars">dólares</string>
    <string name="all_day_open">Abierto 24 horas</string>
    <string name="information">INFORMACIÓN</string>
    <string name="gallery">GALERÍA</string>
    <string name="points_of_interest">PUNTOS DE INTERÉS</string>
    <string name="attractions">ATRACCIONES</string>
    <string name="tours">RECORRIDOS</string>
    <string name="nav_menu_cities">Ciudades</string>
    <string name="nav_menu_notifications">Notificaciones</string>
    <string name="nav_menu_close_session">Cerrar sesión</string>
    <string name="no_gallery">La galería está vacía</string>

    <!-- Errores -->
    <string name="no_internet_error">Error: No hay conexión a internet</string>
    <string name="no_gps_error">Error: GPS deshabilitado, debe habilitarlo para que el programa funcione</string>
    <string name="no_google_play_services_error">Error: No se pudo conectar con Google Play Services</string>
    <string name="interrupted_google_play_services_error">Error: Se ha interrumpido la conexión con Google Play Services</string>
    <string name="no_server_error">Error: No se pudo conectar con el servidor</string>
    <string name="location_permittion_denied">Error: Permiso de localización denegado</string>
    <string name="no_location_error">Error: El GPS no pudo establecer su ubicacion</string>
    <string name="no_address_error">Error: El GPS no pudo establecer su dirección</string>
    <string name="geocoder_error">Error en geocoder:</string>
    <string name="emvideoview_error">Error: Hubo un problema al cargar el contenido</string>


    <string name="title_activity_point_of_interest_tabs" translatable="false">PointOfInterestTabsActivity</string>
    <string name="title_activity_attraction_tabs" translatable="false">AttractionTabsActivity</string>
    <string name="facebook_app_id" translatable="false">1900304510188978</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1900304510188978</string>
    <string name="attraction_share_title">Compartir %1$s en redes sociales</string>
    <string name="attraction_share_ok">Se compartió su mensaje</string>
    <string name="attraction_share_error">Hubo un error al compartir su mensaje</string>
    <string name="attraction_post_message">Trips me ayudó a conocer más de</string>
    <string name="done">Listo</string>
    <string name="sending">Enviando</string>
    <string name="cancel">Cancelar</string>
    <string name="wait_a_second">Espere un momento</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="not_signed_in">Debe iniciar sesión!</string>
    <string name="review_posted">Opinión publicada!</string>
    <string name="review_posting_failure">No se pudo publicar la opinión</string>
    <string name="write_here">Escriba su opinión aquí</string>
    <string name="short_hours">h</string>
    <string name="short_minutes">m</string>
    <string name="tour_attractions_title">Atracciones incluidas</string>

    <string name="just_now">Justo ahora</string>
    <string name="ago">Hace %1$d %2$s</string>
    <string name="minutesUnit">minutos</string>
    <string name="hours_unit">horas</string>
    <string name="days_unit">días</string>
    <string name="months_unit">meses</string>
    <string name="years_unit">años</string>
    <string name="minute_unit">minuto</string>
    <string name="hour_unit">hora</string>
    <string name="day_unit">día</string>
    <string name="month_unit">mes</string>
    <string name="year_unit">año</string>
    <string name="and">y</string>
    <string name="title_activity_tour_details" translatable="false">TourDetailsActivity</string>
    <string name="tours_containing_attraction_title">Recorridos que incluyen esta atracción</string>
    <string name="google_maps_not_installed">Google Maps no está instalado</string>
    <string name="out_of">de</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="manage_sessions">Administrar sesiones</string>
    <string name="title_activity_notifications" translatable="false">Notificaciones</string>
    <string name="login_required_for_review">Debes iniciar sesión para escribir una reseña</string>
    <string name="understood">ENTENDIDO</string>
    <string name="user_blocked">Fuiste bloqueado por un administrador</string>
    <string name="nav_menu_initiate_session">Iniciar sesión</string>
    <string name="logging_out">Cerrando Sesión…</string>
    <string name="logged_out">Sesión cerrada</string>
    <string name="could_not_log_out">No se pudo cerrar sesión</string>
    <string name="gcm_defaultSenderId" translatable="false">295203185705</string>
    <string name="login_required_for_favorite">Debes iniciar sesión para marcar como favorita una atracción</string>
    <string name="login_required_for_visited">Debes iniciar sesión para marcar como visitada una atracción</string>
    <string name="error_marked_as_favorite">No se pudo marcar la atracción como favorita</string>
    <string name="error_unmarked_as_favorite">No se pudo desmarcar la atracción como favorita</string>
    <string name="error_marked_as_visited">No se pudo marcar la atracción como visitada</string>
    <string name="error_unmarked_as_visited">No se pudo desmarcar la atracción como visitada</string>
    <string name="marked_as_favorite">Marcada como favorita</string>
    <string name="marked_as_visited">Marcada como visitada</string>
    <string name="unmarked_as_favorite">Desmarcada como favorita</string>
    <string name="unmarked_as_visited">Desmarcada como visitada</string>
    <string name="logged_in_fb">Has iniciado sesión con facebook</string>
    <string name="logged_in_tw">Has iniciado sesión con twitter</string>
    <string name="logged_in_fb_tw">Has iniciado sesión con facebook y twitter</string>
    <string name="not_logged_in">No has iniciado sesión aún</string>
    <string name="logging_in">Iniciando sesión…</string>
    <string name="no_url_in_notification">La notificación no tiene enlace a una página web</string>
</resources>
