<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cities"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/nav_menu_cities" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_menu_notifications"
            android:visible="false"/>
        <item
            android:id="@+id/nav_initiate_session"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_menu_initiate_session"
            />
        <item
            android:id="@+id/nav_close_session"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_menu_close_session"
            android:visible="false"/>
    </group>

</menu>
