<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- our toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageView
        android:src="@drawable/com_facebook_button_icon"
        android:layout_width="wrap_content"
        android:minWidth="64dp"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#3b5998"
        android:contentDescription="@string/app_name" />
    <ImageView
        android:id="@+id/tw__twitter_logo"
        android:src="@drawable/tw__ic_logo_default"
        android:layout_width="wrap_content"
        android:minWidth="64dp"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#3b5998"
        android:contentDescription="Twitter" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/write_here"
        android:inputType="textMultiLine" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:onClick="send" />

</LinearLayout>