<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/attraction_details_layout_padding"
    >

    <TextView
        android:id="@id/attraction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryLight" />

    <TextView
        android:id="@+id/write_review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:text="@string/my_opinion" />


    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/own_review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        android:layout_gravity="center_horizontal"
        android:progressTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/own_review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/other_reviews_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/other_reviews_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/title_text_size"
            android:text="@string/other_opinions" />


        <TextView
            android:id="@+id/see_more_reviews_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:text="@string/see_more"/>

    </RelativeLayout>

    <include layout="@layout/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"/>

    
    <TextView
        android:id="@+id/tours_containing_attraction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:visibility="gone"
        android:text="@string/tours_containing_attraction_title"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tours_containing_attraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>